# agentadmit-sdk-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.venv-test/: pyvenv.cfg
agentadmit/: __init__.py  _version.py  alerts.py  auth.py  callerconsent.py  cli.py  config.py  consent.py  exceptions.py  keys.py  middleware.py  models.py  routes.py  storage.py  webhooks.py
agentadmit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agentadmit/integrations/: __init__.py  django_integration.py  flask_integration.py  springboot_guide.md
tests/: test_caller_consent.py  test_consent.py  test_django_middleware.py  test_flask_integration.py  test_https_enforcement.py  test_introspection_validation.py  test_presence.py  test_rate_limit_retry.py  test_revoke.py  test_token_exchange.py  test_webhooks.py
