[build-system]
requires = ["setuptools==78.1.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "agentadmit"
version = "1.1.2"
description = "AgentAdmit SDK — User-mediated AI agent authorization for any app"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "Christopher Emerson"},
]

# Upper-bounded ranges for library compatibility — review bounds before each release
# See: TanStack/Mini Shai-Hulud supply chain attack (May 2026), guardrails-ai PyPI compromise
dependencies = [
    "fastapi>=0.100.0,<1.0.0",
    "PyJWT>=2.8.0,<3.0.0",
    "cryptography>=41.0.0,<45.0.0",
    "PyYAML>=6.0,<7.0",
    "pymongo>=4.0.0,<5.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "starlette>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "httpx>=0.24.0,<1.0.0",
    "uvicorn>=0.23.0,<1.0.0",
]

[project.scripts]
agentadmit = "agentadmit.cli:main"

[tool.setuptools.packages.find]
include = ["agentadmit*"]
